Fix student list alignment issue
- Fix student list header alignment in instructional materials

--- a/public/stylesheets/scss/instructional_materials.scss
+++ b/public/stylesheets/scss/instructional_materials.scss
@@ -305,6 +305,7 @@
 
 
 div.progressbar_container {height:15px;padding-top:5px;}
+th .progressbar_container {padding-top: 0px;}
 th.expand_collapse_text div.progressbar_container{width:1px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 
 
